--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
     padding-right: 10px;
 }
 
-#temperature {
+.temperature {
     border: 2px solid black;
     background-color: rgb(241, 241, 241);
     padding: 5px;
@@ -71,7 +71,7 @@ body {
     font-weight: bold;
 }
 
-#temperature * {
+.temperature * {
     font-weight: bold;
 }
 
